# 2616E

./: .gitmodules  LICENSE-camerons-dell.txt  README.md  readme.txt
In The Zone/: autonasync.c  reshape.c
In The Zone/autons/: 10pt.apf  20ptSkills.apf  StationaryGoal.apf  demo.apf  ezSkills.apf
In The Zone/include/: 2616E.h  main.h  ports.h
In The Zone/src/: auto.c  autonasync.c  autondrive_impl.c  bluetooth_impl.c  init.c  intake.c  lcd_impl.c  lift.c  manipulator.c  opcontrol.c
In The Zone/src/2616E_lib/: autoasync.c  autodrive.c  autondrive.c  autonswitch.c  bluetooth.c  correctdrive.c  drive.c  lcd.c  odomCorrect.c  odometry.c  pid.c  reshape.c  sensors.c
In The Zone/src/jinx/: JINX.c
Lib/LCD/: GeneralLCD.c  GeneralLCD.h
Lib/Programs/: CornerFinder.c  DriveSafev1.0.0-BETA.c  LineFollowerAdv.c  PidTester.c  RPMCalculator.c  angleCalculator.c  projaccel.c  rpmTester.c
Lib/pros_base/: project.pros
Lib/pros_base/include/: 2616E.h  main.h  ports.h
Lib/pros_base/src/: .gitmodules  auto.c  (+5 more)
Nothing but Net/beta/: autonomous.c  bar.c  controller.c  lcd.c  main.c  sensors.c
Starstruck/beta/: auton.c  drive.c  lcd.c  main.c  sensors.c
Starstruck/pros_beta/: CMakeLists.txt  Makefile
Starstruck/pros_beta/include/: 2616E.h  main.h  ports.h
Starstruck/pros_beta/src/: auto.c  claw.c  drive.c  init.c  launcher.c  lcd_impl.c  lift.c  opcontrol.c
Starstruck/pros_beta/src/2616E_lib/: autondrive.c  autonswitch.c  drive.c  lcd.c  pid (1).c  pid.c  sensors.c
Starstruck/pros_beta/src/jinx/: Makefile
Starstruck/release/: auton.c  drive.c  main.c  sensors.c
(+13 files in other folders)
